# xrootd-scitokens

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindXrootd.cmake
configs/: scitokens.cfg  xrootd-scitokens.spec
rpm/: xrootd-scitokens.spec
src/: XrdAccSciTokens.cc  XrdSciTokensHelper.hh  scitokens.cpp  scitokens_xrootd.py  scitokens_xrootd_module.cpp
test/: create-pubkey.py  setup_tests.sh  test_inside_docker.sh
